# vakzination

./: .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.vakzination.desktop  org.kde.vakzination.json  org.kde.vakzination.json.license  org.kde.vakzination.metainfo.xml
android/: AndroidManifest.xml  build.gradle
autotests/: CMakeLists.txt  certificatesmodeltest.cpp  nonsense.txt
po/ar/: vakzination.po
po/ast/: vakzination.po
po/ca/: vakzination.po
po/ca@valencia/: vakzination.po
po/cs/: vakzination.po
po/de/: vakzination.po
po/el/: vakzination.po
po/en_GB/: vakzination.po
po/eo/: vakzination.po
po/es/: vakzination.po
po/eu/: vakzination.po
po/fi/: vakzination.po
po/fr/: vakzination.po
po/ga/: vakzination.po
po/gl/: vakzination.po
po/he/: vakzination.po
po/hi/: vakzination.po
po/hu/: vakzination.po
po/ia/: vakzination.po
po/it/: vakzination.po
po/ja/: vakzination.po
po/ka/: vakzination.po
po/ko/: vakzination.po
po/lt/: vakzination.po
po/lv/: vakzination.po
po/nl/: vakzination.po
po/pa/: vakzination.po
po/pl/: vakzination.po
po/pt/: vakzination.po
po/pt_BR/: vakzination.po
po/ro/: vakzination.po
po/sa/: vakzination.po
po/sk/: vakzination.po
po/sl/: vakzination.po
po/sv/: vakzination.po
po/tr/: vakzination.po
po/ug/: vakzination.po
po/uk/: vakzination.po
po/x-test/: vakzination.po
po/zh_CN/: vakzination.po
po/zh_TW/: vakzination.po
src/: CMakeLists.txt  Messages.sh  certificatesmodel.cpp  certificatesmodel.h  config-vakzination.h.in  expected.h  main.cpp  resources.qrc
src/contents/ui/: CertificateDetailsPage.qml
src/qml/: CertificateDelegate.qml  CertificatesPage.qml  RecoveryDetailsPage.qml  RecoveryDetailsSheet.qml  ScanBarcodePage.qml  TestDetailsPage.qml  TestDetailsSheet.qml  VaccinationDetailsPage.qml  VaccinationDetailsSheet.qml  main.qml
